Added a bit of information about our software on the about page

--- a/ckanext/tess/templates/home/about.html
+++ b/ckanext/tess/templates/home/about.html
@@ -130,6 +130,16 @@
             </div>
         </li>
         </ul>
+        <a name="software"> </a>
+        <h2>Software</h2>
+        <p>
+        TeSS is implemented by extending the <a href="http://ckan.org">CKAN platform</a> which is
+         Open Source Data Portal software.<br>
+
+        Our Training Portal and all of our Aggregation Scripts are Open Source; released under the GPL license. 
+        The source code be found in <a href="https://github.com/ElixirUK"> our GitHub repository</a>. <br>
+
+         Please note; our software at present is in pre-alpha release (last updated: 21/01/2015). Our first official alpha release is scheduled for the 30th March 2015.
         </p>
         {% endtrans %}
         {% endif %}
