TESS-36: allow empty value for ELIXIR node field.

--- a/ckanext/tess/templates/package/snippets/package_basic_fields.html
+++ b/ckanext/tess/templates/package/snippets/package_basic_fields.html
@@ -23,6 +23,7 @@
     <label class="control-label" for="field-country_code">{{ _("ELIXIR Node") }}</label>
     <div class="controls">
         <select id="field-country_code" name="country_code" data-module="autocomplete">
+            <option value="" {% if not country_code %} selected="selected" {% endif %}>{{ _('None') }}</option>
             {% for country_code in h.country_codes() %}
             <option value="{{ country_code }}"
             {% if country_code in data.get('country_code', []) %}selected="selected"{% endif %}>{{ country_code }}
@@ -124,7 +125,7 @@
           <option value="deleted" {% if data.get('state', 'none') == 'deleted' %} selected="selected" {% endif %}>{{ _('Deleted') }}</option>
         </select>
       </div>
-    </div>
+    </div>                                        f
   {% endif %}
 
 {% endblock %}
