Minor modifications to 'Software' section in about page.

--- a/ckanext/tess/templates/home/about.html
+++ b/ckanext/tess/templates/home/about.html
@@ -133,13 +133,15 @@
         <a name="software"> </a>
         <h2>Software</h2>
         <p>
-        TeSS is implemented by extending the <a href="http://ckan.org">CKAN platform</a> which is
-         Open Source Data Portal software.<br>
-
-        Our Training Portal and all of our Aggregation Scripts are Open Source; released under the GPL license. 
-        The source code be found in <a href="https://github.com/ElixirUK"> our GitHub repository</a>. <br>
-
-         Please note; our software at present is in pre-alpha release (last updated: 21/01/2015). Our first official alpha release is scheduled for the 30th March 2015.
+            TeSS is implemented by extending the <a href="http://ckan.org">CKAN platform</a>, an Open Source Data Portal software.
+        </p>
+        <p>
+            TeSS is populated automatically by scraping content providers for their training materials. Both the TeSS Portal and all the scraping/aggregation
+            scripts are open source and are released under the GPL license.
+            The source code be found in <a href="https://github.com/ElixirUK">GitHub</a>.
+        </p>
+        <p>
+         Please note that the TeSS at present is in pre-alpha state (as of 21th January 2015). Our first official alpha release is scheduled for the 30th March 2015.
         </p>
         {% endtrans %}
         {% endif %}
