--- a/ckanext/tess/public/css/tess.css
+++ b/ckanext/tess/public/css/tess.css
@@ -316,3 +316,11 @@ hr.style-one {
 .flash-messages{
     text-align:center;
 }
+.icon-elixir {
+    width:16px;
+    height:16px;
+    background-image: url('/images/icon-elixir.png');
+    margin:0;
+    padding:0;
+    float:left;
+}
