--- a/ckanext/tess/templates/package/read_base.html
+++ b/ckanext/tess/templates/package/read_base.html
@@ -61,12 +61,20 @@
     {% endif %}
   {% endblock %}
 
-  {% block package_social %}
-    {% snippet "snippets/social.html" %}
-  {% endblock %}
+    {% block package_elixir_node %}
+        {% if pkg.elixir_node and pkg.elixir_node|length >= 1 %}
+        {# Looks like a list of nodes is returned but we only ever have 0 or 1 nodes #}
+        {% set elixir_node = pkg.elixir_node[0] %}
+            {% snippet "snippets/elixir_node.html", elixir_node=elixir_node, has_context_title=true %}
+        {% endif %}
+    {% endblock %}
 
   {% block package_license %}
     {% snippet "snippets/license.html", pkg_dict=pkg %}
+  {% endblock %}
+
+  {% block package_social %}
+    {% snippet "snippets/social.html" %}
   {% endblock %}
 
 {% endblock %}
