A bit of renaming 'group'->'package'.

--- a/ckanext/tess/templates/group/base_form_page.html
+++ b/ckanext/tess/templates/group/base_form_page.html
@@ -3,7 +3,7 @@
 {% block page_primary_action %}{% endblock %}
 
 {% block breadcrumb_content %}
-  <li>{{ h.nav_link(_('Groups'), controller='group', action='index') }}</li>
+  <li>{{ h.nav_link(_('Packages'), controller='group', action='index') }}</li>
   <li class="active">{% block breadcrumb_link %}{{ h.nav_link(_('Add a Group'), controller='group', action='new') }}{% endblock %}</li>
 {% endblock %}
 
