--- a/ckanext/tess/templates/home/about.html
+++ b/ckanext/tess/templates/home/about.html
@@ -124,7 +124,7 @@
                         This is a two step process. Firstly, you have to create, say, a package from the <a href="/group">packages</a> pages.
                         Secondly, you have to add an existing training material to that package (note that one training material can belong to
                         several packages and/or workflows). This is done by navigating to the page of that particular training material, then
-                        selecting the 'Groups' tab, and selecting the appropriate package from a drop-down list.
+                        selecting the 'Packages' tab, and selecting the appropriate package from a drop-down list.
                     </p>
                 </div>
             </div>
