--- a/ckanext/tess/templates/package/group_list.html
+++ b/ckanext/tess/templates/package/group_list.html
@@ -2,7 +2,7 @@
 {% import 'macros/form.html' as form %}
 
 {% block primary_content_inner %}
-  <h2 class="hide-heading">{{ _('Groups') }}</h2>
+  <h2 class="hide-heading">{{ _('Packages') }}</h2>
 
   {% if c.group_dropdown %}
     <form method="post" class="form-horizontal">
