--- a/ckanext/tess/templates/group/read_base.html
+++ b/ckanext/tess/templates/group/read_base.html
@@ -3,7 +3,7 @@
 {% block subtitle %}{{ c.group_dict.display_name }} - {{ _('Groups') }}{% endblock %}
 
 {% block breadcrumb_content %}
-  <li>{% link_for _('Groups'), controller='group', action='index' %}</li>
+  <li>{% link_for _('Packages'), controller='group', action='index' %}</li>
   <li class="active">{% link_for c.group_dict.display_name|truncate(35), controller='group', action='read', id=c.group_dict.name %}</li>
 {% endblock %}
 
