Offline access for iann events.

--- a/ckanext/tess/templates/events.html
+++ b/ckanext/tess/templates/events.html
@@ -17,7 +17,7 @@
   <div id="iAnnList" class="events-source">
   <p class="events-source-title"><strong>Source: </strong><a target="_blank" href="http://iann.pro">
   <img alt="iAnn" src="/images/iann_logo-32x30.png"/></a></p><hr/>
-  {{ h.read_news() }}
+  {{ h.read_news_iann() }}
   <div class="more-link"><a target="_blank" href="http://mygoblet.org/iannviewer">More events from iAnn</a></div>
   </div>
 {% endblock %}
