--- a/ckanext/tess/templates/nodes/index.html
+++ b/ckanext/tess/templates/nodes/index.html
@@ -2,12 +2,20 @@
 
 {% block subtitle %}{{ _('Nodes') }}{% endblock %}
 
+
+
 {% block breadcrumb_content %}
 <li class="active">{% link_for _('Nodes'), controller='group', action='index' %}</li>
 {% endblock %}
 
 {% block primary %}
 {% snippet "nodes/snippets/helper.html" %}
+
+{% for node_name in h.get_node_list() %}
+    {% snippet "nodes/snippets/materials_for_node.html", node=node_name %}
+{% endfor %}
+
+
 <img src="/images/hub.png">
 {% endblock %}
 {% block secondary %}{% endblock %}
