Made the nodes pages modular. Improved the formatting

--- a/ckanext/tess/public/css/tess.css
+++ b/ckanext/tess/public/css/tess.css
@@ -316,3 +316,10 @@ hr.style-one {
 .flash-messages{
     text-align:center;
 }
+
+.materials {
+    margin: 20px;
+    border: solid;
+    padding: 20px;
+}
+
