--- a/ckanext/tess/templates/node_template.html
+++ b/ckanext/tess/templates/node_template.html
@@ -15,29 +15,41 @@
 
 
 {% block primary %}
-    {% snippet "nodes/snippets/helper.html" %}
-
-    <h1 class="page-heading" style="text-align:center">{{ node_name }}</h1>
-    <table class="node_content">
-        <tr>
-            <td style="width:50%">
-                <div class="materials">
-                    {% block materials %}
-                        {% snippet "nodes/snippets/materials_for_node.html", node=node_name %}
-                    {% endblock %}
-                </div>
-            </td>
-            <td style="vertical-align:top">
-                <div class="materials">
-                    {% block organizations %}
-                        {# snippet "nodes/snippets/orgz_for_node.html", node=node_name #}
-                        <h1>Organizations contributing to {{ node_name }}</h1><hr>
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum
-                    {% endblock %}
-                </div>
-            </td>
-        </tr>
-    </table>
+  {% snippet "nodes/snippets/helper.html" %}
+  <div class="row-fluid">
+     <div class="span12">
+         {% block node_heading %}
+             <h1 class="page-heading" style="text-align:center">{{ node_name }}</h1>
+         {% endblock %}
+     </div>
+  </div>
+  <div class="row-fluid">
+    <div class="span10">
+       {% block materials %}
+            {% snippet "nodes/snippets/materials_for_node.html", node=node_name %}    
+       {% endblock %}
+       {% block organizations %}
+            {% snippet "nodes/snippets/organizations_for_node.html", node=node_name %}
+       {% endblock %}
+     </div>
+  </div>
+  <div class="row-fluid">
+    <div class="span10">
+       {% block news %}
+            {% snippet "nodes/snippets/news_for_node.html", node=node_name %}
+       {% endblock %}
+       {% block services %}
+            {% snippet "nodes/snippets/events_for_node.html", node=node_name %}
+       {% endblock %}
+     <!--/div>
+  </div>
+  <div class="row-fluid">
+    <div class="span10"-->
+       {% block staff %}
+            {% snippet "nodes/snippets/staff_for_node.html", node=node_name %}
+       {% endblock %}
+    </div>
+  </div>
 <br>
 {% endblock %}
  
