--- a/ckanext/tess/templates/nodes/uk.html
+++ b/ckanext/tess/templates/nodes/uk.html
@@ -13,6 +13,43 @@
     {% endblock %}
 #}
 
+  {% block node_heading %}
+        <div class="row-fluid">
+            <div class="span10">
+                <h1 class="page-heading" style="text-align:center">{{ node_name }}        </h1>
+                <h3 style="text-align:center"><a href src="http://elixir-uk.org/">ELIXIR UK Homepage</a></h3>
+            </div>
+            <div class="span2">
+               <img src="http://www.tgac.ac.uk/uploads/images/Outreach/ELIXIR_node_UK.png"/>     <!--style="max-height:200px"/-->     
+            </div>  
+        </div>
 
+  {% endblock %}
+ 
+  {% block organizations %}
+    <div class="span5 offset1">
+     <div class="row-fluid feed">
+       <h2> Institutions </h2>
+       <hr/>
+       <div class="span10 offset1">
+        <a href="http://www.ox.ac.uk/"> <h3>The University of Oxford</h3>
+        <img src="/images/institutions/oxford.png" style="max-width:65%"/></a>
+        <a href="http://www.manchester.ac.uk/"> <h3>The University of Manchester</h3>
+        <img src="/images/institutions/manchester.jpg" style="max-width:65%"/></a>     
+       </div>
+    </div>
+  </div>
+  {% endblock %}
+
+  {% block news %}
+    <div class="span5 offset1">
+     <div class="row-fluid feed">
+       <h2> Latest News </h2>
+       <hr/>
+    <a class="twitter-timeline" href="https://twitter.com/ElixirNodeUk" data-widget-id="559708972698308608">Tweets by @ElixirNodeUk</a>
+    <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
+     </div>
+    </div>
+  {% endblock %} 
 
 
