--- a/ckanext/tess/templates/nodes/uk.html
+++ b/ckanext/tess/templates/nodes/uk.html
@@ -17,12 +17,34 @@
         <div class="row-fluid">
             <div class="span10">
                 <h1 class="page-heading" style="text-align:center">{{ node_name }}        </h1>
-                <h3 style="text-align:center"><a href src="http://elixir-uk.org/">ELIXIR UK Homepage</a></h3>
+                <h3 style="text-align:center"><a href="http://elixir-uk.org">ELIXIR UK Homepage</a></h3>
             </div>
             <div class="span2">
+                <a href="http://elixir-uk.org">
                <img src="http://www.tgac.ac.uk/uploads/images/Outreach/ELIXIR_node_UK.png"/>     <!--style="max-height:200px"/-->     
+                </a>
             </div>  
         </div>
+        <div class="row-fluid">
+        <div class="span12">
+          <div id="myCarousel" class="carousel slide">
+            <ol class="carousel-indicators">
+                <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+                <li data-target="#myCarousel" data-slide-to="1"></li>
+                <li data-target="#myCarousel" data-slide-to="2"></li>
+            </ol>
+            <!-- Carousel items -->
+            <div class="carousel-inner" style="max-height:300px">
+                <div class="active item"><img src="/images/institutions/manchester.jpg" style="min-width:100%"/></div>
+                <div class="item"><img src="/images/nodes/uk/flag.jpg" style="min-width:100%"/></div>
+                <div class="item"><img src="/images/nodes/uk/cabs.jpg" style="min-width:100%"/></div>
+            </div>
+              <!-- Carousel nav -->
+              <a class="carousel-control left" href="#myCarousel" data-slide="prev">&lsaquo;</a>
+              <a class="carousel-control right" href="#myCarousel" data-slide="next">&rsaquo;</a>
+          </div>
+        </div>
+       </div>
 
   {% endblock %}
  
