Moved some of the feed templates around and resiezd

--- a/ckanext/tess/templates/nodes/snippets/events_for_node.html
+++ b/ckanext/tess/templates/nodes/snippets/events_for_node.html
@@ -2,7 +2,7 @@
 {% set datasets = h.get_node_materials(node) %}
 {% if datasets != None %}
 
-   <div class="span5 offset1">
+   <div class="span6">
      <div class="row-fluid feed">
        <h2> Events</h2>
        <hr/>
