--- a/ckanext/tess/templates/nodes/snippets/materials_for_node.html
+++ b/ckanext/tess/templates/nodes/snippets/materials_for_node.html
@@ -6,7 +6,7 @@
 
 {% set datasets = h.get_node_materials(node) %}
 {% if datasets != None %}
-   <div class="span5 offset1">
+   <div class="span6">
      <div class="row-fluid feed">
        {% if hub == True: %}
            <h2> Training Materials for {{ node }} </h2>      
@@ -14,11 +14,9 @@
             <h2> Training Materials </h2>
        {% endif %}
        <hr/>
-       <div class="span11 offset1">
           {% for dataset in datasets %}
              {% snippet 'snippets/package_item.html', package=dataset %}
           {% endfor %}
-       </div>
     </div>
   </div>
 {% endif %}
