--- a/ckanext/tess/templates/node_template.html
+++ b/ckanext/tess/templates/node_template.html
@@ -28,26 +28,27 @@
        {% block materials %}
             {% snippet "nodes/snippets/materials_for_node.html", node=node_name %}    
        {% endblock %}
-       {% block organizations %}
-            {% snippet "nodes/snippets/organizations_for_node.html", node=node_name %}
+       {% block news %}
+            {% snippet "nodes/snippets/news_for_node.html", node=node_name %}
        {% endblock %}
      </div>
   </div>
   <div class="row-fluid">
     <div class="span10">
-       {% block news %}
-            {% snippet "nodes/snippets/news_for_node.html", node=node_name %}
-       {% endblock %}
-       {% block services %}
+       {% block events %}
             {% snippet "nodes/snippets/events_for_node.html", node=node_name %}
+       {% endblock %}
+       {% block staff %}
+            {% snippet "nodes/snippets/staff_for_node.html", node=node_name %}
        {% endblock %}
      <!--/div>
   </div>
   <div class="row-fluid">
     <div class="span10"-->
-       {% block staff %}
-            {% snippet "nodes/snippets/staff_for_node.html", node=node_name %}
+       {% block organizations %}
+            {% snippet "nodes/snippets/organizations_for_node.html", node=node_name %}
        {% endblock %}
+
     </div>
   </div>
 <br>
