--- a/ckanext/tess/templates/nodes/embl.html
+++ b/ckanext/tess/templates/nodes/embl.html
@@ -1,5 +1,48 @@
-{% set node_name = 'EMBL' %}
+{% set node_name = 'EMBL-EBI' %}
 {% extends "node_template.html" %}
 
 {# Override node_template blocks here for custom configuration #}
+  {% block news %}
+    <div class="span5 offset1">
+     <div class="row-fluid feed">
+       <h2> Latest News </h2>
+       <hr/>
+<a class="twitter-timeline" href="https://twitter.com/emblebi" data-widget-id="559760117273747456">Tweets by @emblebi</a>
+<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
+     </div>
+    </div>
+  {% endblock %}
+
+  {% block node_heading %}
+        <div class="row-fluid">
+            <div class="span10">
+                <h1 class="page-heading" style="text-align:center">{{ node_name }}        </h1>
+                <h3 style="text-align:center"><a href="http://wwwdev.ebi.ac.uk/">ELIXIR EBI Homepage</a></h3>
+            </div>
+            <div class="span2">
+                <a href="http://wwwdev.ebi.ac.uk/">
+                  <img src="/images/nodes/ebi/logo.png"/>
+                </a>
+            </div>
+        </div><br>
+        <div class="row-fluid">
+        <div class="span12">
+          <div id="myCarousel" class="carousel slide">
+            <ol class="carousel-indicators">
+                <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+                <li data-target="#myCarousel" data-slide-to="1"></li>
+                <li data-target="#myCarousel" data-slide-to="2"></li>
+            </ol>
+            <!-- Carousel items -->
+            <div class="carousel-inner" style="max-height:300px">
+                <div class="item active"><img src="/images/nodes/ebi/group.jpg" style="min-width:100%"/></div>
+                <div class="item"><img src="/images/nodes/ebi/logo.png" style="min-width:100%"/></div>
+            </div>
+              <!-- Carousel nav -->
+              <a class="carousel-control left" href="#myCarousel" data-slide="prev">&lsaquo;</a>
+              <a class="carousel-control right" href="#myCarousel" data-slide="next">&rsaquo;</a>
+          </div>
+        </div>
+       </div>
+  {% endblock %}
 
