--- a/ckanext/tess/templates/nodes/uk.html
+++ b/ckanext/tess/templates/nodes/uk.html
@@ -24,7 +24,7 @@
                <img src="http://www.tgac.ac.uk/uploads/images/Outreach/ELIXIR_node_UK.png"/>     <!--style="max-height:200px"/-->     
                 </a>
             </div>  
-        </div>
+        </div><br>
         <div class="row-fluid">
         <div class="span12">
           <div id="myCarousel" class="carousel slide">
@@ -38,6 +38,7 @@
                 <div class="active item"><img src="/images/institutions/manchester.jpg" style="min-width:100%"/></div>
                 <div class="item"><img src="/images/nodes/uk/flag.jpg" style="min-width:100%"/></div>
                 <div class="item"><img src="/images/nodes/uk/cabs.jpg" style="min-width:100%"/></div>
+                <div class="item"><img src="/images/nodes/uk/peaks.jpg" style="min-width:100%"/></div>
             </div>
               <!-- Carousel nav -->
               <a class="carousel-control left" href="#myCarousel" data-slide="prev">&lsaquo;</a>
@@ -49,15 +50,15 @@
   {% endblock %}
  
   {% block organizations %}
-    <div class="span5 offset1">
+    <div class="span6">
      <div class="row-fluid feed">
        <h2> Institutions </h2>
        <hr/>
-       <div class="span10 offset1">
-        <a href="http://www.ox.ac.uk/"> <h3>The University of Oxford</h3>
-        <img src="/images/institutions/oxford.png" style="max-width:65%"/></a>
-        <a href="http://www.manchester.ac.uk/"> <h3>The University of Manchester</h3>
-        <img src="/images/institutions/manchester.jpg" style="max-width:65%"/></a>     
+        <div style="margin-left:auto; margin-right:auto; width:80%">
+            <a href="http://www.ox.ac.uk/"> <h3>The University of Oxford</h3>
+            <img src="/images/institutions/oxford.png"/></a>
+            <a href="http://www.manchester.ac.uk/"> <h3>The University of Manchester</h3>
+            <img src="/images/institutions/manchester.jpg"/></a>     
        </div>
     </div>
   </div>
