Removed incorrect train co-ords

--- a/ckanext/tess/templates/nodes/index.html
+++ b/ckanext/tess/templates/nodes/index.html
@@ -27,31 +27,31 @@
 <div class="row-fluid">
      <div class="span3">
       <a href="/nodes/uk.html"><img src="/images/node_flags/GB.png" class="img-circle"/>
-      <div style="width:90%; margin:auto;">
+      <div style="width:95%; margin:auto;">
         <h3>United Kingdom</h3></a>
-        <b>Head of Node:</b> Chris Ponting <br/>
-        <b>Training Co-Ordinator:</b> Rita Hendricusdottir <br/>
-        <b>Technical Co-Ordinator:</b> Manuel Corpas
+        <b>Head of Node:</b> <a href="mailto:chris.ponting@dpag.ox.ac.uk">Chris Ponting</a> <br/>
+        <b>Training Co-ord:</b> <a href="mailto: ">Rita Hendricusdottir</a> <br/>
+        <b>Technical Co-ord:</b> <a href="mailto: ">Manuel Corpas </a>
       </div>
     </div>
     <div class="span1"></div>
     <div class="span3">
       <a href="/nodes/nl.html"><img src="/images/node_flags/NL.png" class="img-circle"/>
-      <div style="width:70%; margin:auto;">
+      <div style="width:90%; margin:auto;">
         <h3>Netherlands</h3></a>
-        <b>Head of Node:</b> Barend Mons <br>
-        <b>Training Co-Ordinator:</b> Celia Van Gelder <br>
-        <b>Technical Co-Ordinator:</b> Rob Hooft
+        <b>Head of Node:</b> <a href="mailto: "> Barend Mons </a><br>
+        <b>Training Co-Ord:</b> <a href="mailto: ">Celia Van Gelder</a> <br>
+        <b>Technical Co-Ord:</b> <a href="mailto: ">Rob Hooft</a>
       </div>
     </div>
     <div class="span1"></div>
      <div class="span3">
       <a href="/nodes/ch.html"><img src="/images/node_flags/CH.png" class="img-circle"/>
-      <div style="width:70%; margin:auto;">
+      <div style="width:90%; margin:auto;">
         <h3>Switzerland</h3></a>
-        <b>Head of Node:</b> Rob Appel <br>
-        <b>Training Co-Ordinator:</b> Patricia Palagi <br>
-        <b>Technical Co-Ordinator:</b> Heinz Stockinger
+        <b>Head of Node:</b> <a href="mailto: ">Rob Appel</a> <br>
+        <b>Training Co-Ord:</b> <a href="mailto: "> Patricia Palagi </a><br>
+        <b>Technical Co-Ord:</b> <a href="mailto: "> Heinz Stockinger</a>
       </div>
     </div>
 </div>
@@ -62,9 +62,6 @@
       <a href="/nodes/se.html"><img src="/images/node_flags/SE.png" class="img-circle"/>
       <div style="width:70%; margin:auto;">
         <h3>Sweden</h3></a>
-        <b>Head of Node:</b> Chris Ponting
-        <b>Training Co-Ordinator:</b> Rita Hendricusdottir
-        <b>Technical Co-Ordinator:</b> Manuel Corpas
       </div>
    </div>
    <div class="span1"></div>
@@ -72,8 +69,6 @@
       <a href="/nodes/fi.html"><img src="/images/node_flags/FI.png" class="img-circle"/>
       <div style="width:70%; margin:auto;">
         <h3>Finland</h3></a>
-        <h4> Training Co-Ordinator:</h4> Lee Larcombe
-        <h4> Technical Co-Ordinator:</h4> Aleks Nenadic
       </div>
     </div>
   <div class="span1"></div>
@@ -81,8 +76,6 @@
       <a href="/nodes/pt.html"><img src="/images/node_flags/PT.png" class="img-circle"/>
       <div style="width:70%; margin:auto;">
         <h3>Portugal</h3></a>
-        <h4> Training Co-Ordinator:</h4> Lee Larcombe
-        <h4> Technical Co-Ordinator:</h4> Aleks Nenadic
       </div>
     </div>
 </div>
@@ -93,8 +86,6 @@
       <a href="/nodes/ee.html"><img src="/images/node_flags/EE.png" class="img-circle"/>
       <div style="width:70%; margin:auto;">
         <h3>Estonia</h3></a>
-        <h4> Training Co-Ordinator:</h4> Lee Larcombe
-        <h4> Technical Co-Ordinator:</h4> Aleks Nenadic
       </div>
     </div>
     <div class="span1"></div>
@@ -102,8 +93,6 @@
       <a href="/nodes/il.html"><img src="/images/node_flags/IL.png" class="img-circle"/>
       <div style="width:70%; margin:auto;">
         <h3>Israel</h3></a>
-        <h4> Training Co-Ordinator:</h4> Lee Larcombe
-        <h4> Technical Co-Ordinator:</h4> Aleks Nenadic
       </div>
     </div>
     <div class="span1"></div>
@@ -111,8 +100,6 @@
       <a href="/nodes/no.html"><img src="/images/node_flags/NO.png" class="img-circle"/>
       <div style="width:70%; margin:auto;">
         <h3>Norway</h3></a>
-        <h4> Training Co-Ordinator:</h4> Lee Larcombe
-        <h4> Technical Co-Ordinator:</h4> Aleks Nenadic
       </div>
     </div>
 </div>
@@ -122,8 +109,6 @@
       <a href="/nodes/dk.html"><img src="/images/node_flags/DK.png" class="img-circle"/>
       <div style="width:70%; margin:auto;">
         <h3>Denmark</h3></a>
-        <h4> Training Co-Ordinator:</h4> Lee Larcombe
-        <h4> Technical Co-Ordinator:</h4> Aleks Nenadic
       </div>
     </div>
     <div class="span1"></div>
@@ -131,8 +116,6 @@
       <a href="/nodes/embl.html"><img src="/images/nodes/ebi/logo.png" class="img-circle"/>
       <div style="width:70%; margin:auto;">
         <h3>EBI</h3></a>
-        <h4> Training Co-Ordinator:</h4> Lee Larcombe
-        <h4> Technical Co-Ordinator:</h4> Aleks Nenadic
       </div>
     </div>
 <div class="span1"></div>
