Made more modular and improved formatting

--- a/ckanext/tess/templates/nodes/index.html
+++ b/ckanext/tess/templates/nodes/index.html
@@ -25,100 +25,98 @@
 </div>
 <br><br>
 <div class="row-fluid">
-     <div class="span3">
-      <a href="/nodes/uk.html"><img src="/images/node_flags/GB.png" class="img-circle"/>
-      <div style="width:95%; margin:auto;">
-        <h3>United Kingdom</h3></a>
-        <b>Head of Node:</b> <a href="mailto:chris.ponting@dpag.ox.ac.uk">Chris Ponting</a> <br/>
-        <b>Training Co-ord:</b> <a href="mailto: ">Rita Hendricusdottir</a> <br/>
-        <b>Technical Co-ord:</b> <a href="mailto: ">Manuel Corpas </a>
-      </div>
-    </div>
-    <div class="span1"></div>
-    <div class="span3">
-      <a href="/nodes/nl.html"><img src="/images/node_flags/NL.png" class="img-circle"/>
-      <div style="width:90%; margin:auto;">
-        <h3>Netherlands</h3></a>
-        <b>Head of Node:</b> <a href="mailto: "> Barend Mons </a><br>
-        <b>Training Co-Ord:</b> <a href="mailto: ">Celia Van Gelder</a> <br>
-        <b>Technical Co-Ord:</b> <a href="mailto: ">Rob Hooft</a>
-      </div>
-    </div>
-    <div class="span1"></div>
-     <div class="span3">
-      <a href="/nodes/ch.html"><img src="/images/node_flags/CH.png" class="img-circle"/>
-      <div style="width:90%; margin:auto;">
-        <h3>Switzerland</h3></a>
-        <b>Head of Node:</b> <a href="mailto: ">Rob Appel</a> <br>
-        <b>Training Co-Ord:</b> <a href="mailto: "> Patricia Palagi </a><br>
-        <b>Technical Co-Ord:</b> <a href="mailto: "> Heinz Stockinger</a>
-      </div>
-    </div>
+  <div class="span11 offset1">
+     {% snippet "nodes/snippets/flag.html", name="United Kingdom", 
+                                            flag="/images/node_flags/GB.png",
+                                            page="/nodes/uk.html",
+                                            hon="<a href='mailto:chris.ponting@dpag.ox.ac.uk'>Chris Ponting</a>",
+                                            trc="<a href='mailto: '>Rita Hendricusdottir</a>",
+                                            tec="<a href='mailto: '>Manuel Corpas </a>" %}
+                                                         
+     {% snippet "nodes/snippets/flag.html", name="Netherlands", 
+                                            flag="/images/node_flags/NL.png",
+                                            page="/nodes/nl.html",
+                                            hon="<a href='mailto: '>Barend Mons</a>",
+                                            trc="<a href='mailto: '>Celia Van Gelder</a>",
+                                            tec="<a href='mailto: '>Rob Hooft</a>" %}
+
+     {% snippet "nodes/snippets/flag.html", name="Switzerland", 
+                                            flag="/images/node_flags/CH.png",
+                                            page="/nodes/ch.html",
+                                            hon="<a href='mailto: '>Rob Appel</a>",
+                                            trc="<a href='mailto: '>Patricia Palagi</a>",
+                                            tec="<a href='mailto: '>Heinz Stockinger </a>" %}
+
+  </div>
+</div>
+<br><br>
+
+<div class="row-fluid">
+  <div class="span11 offset1">
+     {% snippet "nodes/snippets/flag.html", name="Sweden", 
+                                            flag="/images/node_flags/SE.png",
+                                            page="/nodes/se.html",
+                                            hon="<a href='mailto: '>Bengt Persson</a>",
+                                            trc="<a href='mailto: '>Sara Light</a>",
+                                            tec="<a href='mailto: '>Mikael Borg</a>" %}
+     {% snippet "nodes/snippets/flag.html", name="Finland", 
+                                            flag="/images/node_flags/FI.png",
+                                            page="/nodes/fi.html",
+                                            hon="<a href='mailto: '>Head Of Node</a>",
+                                            trc="<a href='mailto: '>Training Coord</a>",
+                                            tec="<a href='mailto: '>Tech Coord</a>" %}
+
+     {% snippet "nodes/snippets/flag.html", name="Portugal", 
+                                            flag="/images/node_flags/PT.png",
+                                            page="/nodes/pt.html",
+                                            hon="<a href='mailto: '>Head Of Node</a>",
+                                            trc="<a href='mailto: '>Training Coord</a>",
+                                            tec="<a href='mailto: '>Tech Coord</a>" %}
+
+  </div>
+</div>
+<br><br>    
+<div class="row-fluid">
+  <div class="span11 offset1">
+     {% snippet "nodes/snippets/flag.html", name="Estonia", 
+                                            flag="/images/node_flags/EE.png",
+                                            page="/nodes/ee.html",
+                                            hon="<a href='mailto: '>Head Of Node</a>",
+                                            trc="<a href='mailto: '>Training Coord</a>",
+                                            tec="<a href='mailto: '>Tech Coord</a>" %}
+     {% snippet "nodes/snippets/flag.html", name="Israel", 
+                                            flag="/images/node_flags/IL.png",
+                                            page="/nodes/il.html",
+                                            hon="<a href='mailto: '>Head Of Node</a>",
+                                            trc="<a href='mailto: '>Training Coord</a>",
+                                            tec="<a href='mailto: '>Tech Coord</a>" %}
+     {% snippet "nodes/snippets/flag.html", name="Norway", 
+                                            flag="/images/node_flags/NO.png",
+                                            page="/nodes/no.html",
+                                            hon="<a href='mailto: '>Head Of Node</a>",
+                                            trc="<a href='mailto: '>Training Coord</a>",
+                                            tec="<a href='mailto: '>Tech Coord</a>" %}
+  </div>
 </div>
 <br><br>    
 
 <div class="row-fluid">
-   <div class="span3">
-      <a href="/nodes/se.html"><img src="/images/node_flags/SE.png" class="img-circle"/>
-      <div style="width:70%; margin:auto;">
-        <h3>Sweden</h3></a>
-      </div>
-   </div>
-   <div class="span1"></div>
-     <div class="span3">
-      <a href="/nodes/fi.html"><img src="/images/node_flags/FI.png" class="img-circle"/>
-      <div style="width:70%; margin:auto;">
-        <h3>Finland</h3></a>
-      </div>
-    </div>
-  <div class="span1"></div>
-     <div class="span3">
-      <a href="/nodes/pt.html"><img src="/images/node_flags/PT.png" class="img-circle"/>
-      <div style="width:70%; margin:auto;">
-        <h3>Portugal</h3></a>
-      </div>
-    </div>
-</div>
-<br><br>    
+  <div class="span11 offset1">
+     {% snippet "nodes/snippets/flag.html", name="Denmark", 
+                                            flag="/images/node_flags/DK.png",
+                                            page="/nodes/dk.html",
+                                            hon="<a href='mailto: '>Head Of Node</a>",
+                                            trc="<a href='mailto: '>Training Coord</a>",
+                                            tec="<a href='mailto: '>Tech Coord</a>" %}
 
-<div class="row-fluid">
-   <div class="span3">
-      <a href="/nodes/ee.html"><img src="/images/node_flags/EE.png" class="img-circle"/>
-      <div style="width:70%; margin:auto;">
-        <h3>Estonia</h3></a>
-      </div>
-    </div>
-    <div class="span1"></div>
-     <div class="span3">
-      <a href="/nodes/il.html"><img src="/images/node_flags/IL.png" class="img-circle"/>
-      <div style="width:70%; margin:auto;">
-        <h3>Israel</h3></a>
-      </div>
-    </div>
-    <div class="span1"></div>
-     <div class="span3">
-      <a href="/nodes/no.html"><img src="/images/node_flags/NO.png" class="img-circle"/>
-      <div style="width:70%; margin:auto;">
-        <h3>Norway</h3></a>
-      </div>
-    </div>
-</div>
-<br><br>    
-<div class="row-fluid">
-     <div class="span3">
-      <a href="/nodes/dk.html"><img src="/images/node_flags/DK.png" class="img-circle"/>
-      <div style="width:70%; margin:auto;">
-        <h3>Denmark</h3></a>
-      </div>
-    </div>
-    <div class="span1"></div>
-     <div class="span3">
-      <a href="/nodes/embl.html"><img src="/images/nodes/ebi/logo.png" class="img-circle"/>
-      <div style="width:70%; margin:auto;">
-        <h3>EBI</h3></a>
-      </div>
-    </div>
-<div class="span1"></div>
+     {% snippet "nodes/snippets/flag.html", name="EMBL-EBI", 
+                                            flag="/images/nodes/ebi/logo.png",
+                                            page="/nodes/embl.html",
+                                            hon="<a href='mailto: '>Head Of Node</a>",
+                                            trc="<a href='mailto: '>Training Coord</a>",
+                                            tec="<a href='mailto: '>Tech Coord</a>" %}
+
+  </div>
 </div>
 
 <br>
