Made changes to bootstrap scaffold divs. Now creates rows dynamically.

--- a/ckanext/tess/templates/nodes/snippets/events_for_node.html
+++ b/ckanext/tess/templates/nodes/snippets/events_for_node.html
@@ -2,18 +2,18 @@
 {% set datasets = h.get_node_materials(node) %}
 {% if datasets != None %}
 
-   <div class="span6">
-     <div class="row-fluid feed">
+   <div class="span5">
+     <div class="feed">
        <h2> Events</h2>
        <hr/>
-       <div class="span10 offset1">
+       <!--div class="span10 offset1"-->
           <div id="iAnnList" class="events-source">
               <p class="events-source-title"><strong>Source: </strong><a target="_blank" href="http://iann.pro">
               <img alt="iAnn" src="/images/iann_logo-32x30.png"/></a></p><hr/>
               {{ h.read_news_iann() }}
               <div class="more-link"><a target="_blank" href="http://mygoblet.org/iannviewer">More events from iAnn</a></div>
           </div>
-       </div>
+       <!--/div-->
     </div>
   </div>
 {% endif %}
