--- a/ckanext/tess/templates/nodes/uk.html
+++ b/ckanext/tess/templates/nodes/uk.html
@@ -50,8 +50,8 @@
   {% endblock %}
  
   {% block organizations %}
-    <div class="span6">
-     <div class="row-fluid feed">
+    <div class="span5">
+     <div class="feed">
        <h2> Institutions </h2>
        <hr/>
         <div style="margin-left:auto; margin-right:auto; width:80%">
@@ -65,8 +65,8 @@
   {% endblock %}
 
   {% block news %}
-    <div class="span5 offset1">
-     <div class="row-fluid feed">
+    <div class="span5">
+     <div class="feed">
        <h2> Latest News </h2>
        <hr/>
     <a class="twitter-timeline" href="https://twitter.com/ElixirNodeUk" data-widget-id="559708972698308608">Tweets by @ElixirNodeUk</a>
