--- a/ckanext/tess/templates/nodes/nl.html
+++ b/ckanext/tess/templates/nodes/nl.html
@@ -48,8 +48,8 @@
   {% endblock %}
  
   {% block organizations %}
-    <div class="span6">
-     <div class="row-fluid feed">
+    <div class="span5">
+     <div class="feed">
        <h2> Institutions </h2>
        <hr/>
         <div style="margin-left:auto; margin-right:auto; width:90%">
@@ -63,8 +63,8 @@
   {% block news %}
   {% endblock %} 
 
-    <div class="span5 offset1">
-     <div class="row-fluid feed">
+    <div class="span5">
+     <div class="feed">
        <h2> Latest News </h2>
        <hr/>
     <a class="twitter-timeline" href="https://twitter.com/ElixirNodeUk" data-widget-id="559708972698308608">Tweets by @ElixirNodeUk</a>
@@ -73,8 +73,8 @@
     </div>
 
   {% block staff %}
-    <div class="span5 offset1">
-     <div class="row-fluid feed">
+    <div class="span5">
+     <div class="feed">
        <h2> Staff </h2>
        <hr/>
          <h4> Head of Node</h4>
