--- a/ckanext/tess/templates/nodes/snippets/staff_for_node.html
+++ b/ckanext/tess/templates/nodes/snippets/staff_for_node.html
@@ -2,17 +2,17 @@
 {% set datasets = h.get_node_materials(node) %}
 {% if datasets != None %}
 
-   <div class="span5 offset1">
-     <div class="row-fluid feed">
+   <div class="span5">
+     <div class="feed">
        <h2> Staff </h2>
        <hr/>
-       <div class="span10 offset1">
+       <!--div class="span10 offset1"-->
             Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore 
             et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut 
             aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse 
             cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
             culpa qui officia deserunt mollit anim id est laborum
-       </div>
+       <!--/div-->
     </div>
   </div>
 {% endif %}
